--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angularfire2": "^5.0.0-rc.3",
     "core-js": "^2.4.1",
     "firebase": "^4.6.2",
+    "jquery": "^3.2.1",
     "materialize-css": "^0.100.2",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
@@ -32,6 +33,7 @@
     "@angular/cli": "1.5.0",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
+    "@types/jquery": "^3.2.16",
     "typescript": "~2.4.2"
   }
 }
