--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "emotify",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -12,28 +12,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "angularfire2": "^5.0.0-rc.3",
-    "core-js": "^2.4.1",
-    "firebase": "^4.6.2",
-    "jquery": "^3.2.1",
-    "materialize-css": "^0.100.2",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
+    "@angular/animations": "^7.2.15",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/router": "^7.2.15",
+    "angularfire2": "^5.1.3",
+    "core-js": "^2.5.7",
+    "firebase": "^5.5.0",
+    "jquery": "^3.4.1",
+    "materialize-css": "^1.0.0",
+    "rxjs": "^6.5.2",
+    "tslib": "^1.9.0",
+    "zone.js": "^0.8.0"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
-    "@types/jquery": "^3.2.16",
-    "typescript": "~2.4.2"
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/language-service": "^7.2.15",
+    "@types/jquery": "^3.3.29",
+    "typescript": "~3.2.4"
   }
 }
