--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.15",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "^7.2.15",
     "@angular/compiler": "^7.2.15",
     "@angular/core": "^7.2.15",
     "@angular/forms": "^7.2.15",
     "@angular/http": "^7.2.15",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "^7.2.15",
     "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "^7.2.15",
     "angularfire2": "^5.1.3",
     "core-js": "^2.5.7",
     "firebase": "^5.5.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "materialize-css": "^1.0.0",
     "rxjs": "^6.5.2",
