--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,6 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/emotify-web-app
     docker:
       - image: circleci/node:8-browsers
     steps:
@@ -13,4 +12,15 @@ jobs:
           key: EmotifyCircleCI-{{ .Branch }}-{{ checksum "package.json" }}
           paths:
             - "node_modules"
-      - run: npm run ng build
+      - run:
+          name: Install dependencies
+          command: 'npm install'
+      - run:
+          name: Build
+          command: npm run ng build
+
+workflows:
+  version: 2
+  build_source:
+    jobs:
+      - build
