--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,11 +34,11 @@ jobs:
       - restore_cache:
           key: EmotifyCircleCI-{{ .Branch }}-{{ checksum "package.json" }}
       - run:
-          name: Install dependencies
-          command: 'npm install'
+          name: Install Firebase
+          command: npm install -g firebase-tools
       - run:
           name: Deploy Master to Firebase
-          command: npm run firebase deploy --token FIREBASE_DEPLY_TOKEN
+          command: npm run firebase deploy --token FIREBASE_DEPLY_TOKEN --non-interactive
 
 
 workflows:
