--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           key: EmotifyCircleCI-{{ .Branch }}-{{ checksum "package.json" }}
       - run:
           name: Install Firebase
-          command: npm install -g firebase-tools
+          command: npm install --save-dev firebase-tools
       - run:
           name: Deploy Master to Firebase
           command: npm run firebase deploy --token FIREBASE_DEPLY_TOKEN --non-interactive
