--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,8 @@ jobs:
       - restore_cache:
           key: EmotifyCircleCI-{{ .Branch }}-{{ checksum "package.json" }}
       - run:
-          name: Install Firebase
-          command: npm install --save-dev firebase-tools
+          name: Install dependencies
+          command: npm install
       - run:
           name: Deploy Master to Firebase
           command: npm run firebase deploy --only hosting --token FIREBASE_DEPLY_TOKEN --non-interactive
