--- a/functions/package.json
+++ b/functions/package.json
@@ -12,7 +12,7 @@
   "engines": {
     "node": "8"
   },
-  "main": "lib/index.js",
+  "main": "index.js",
   "dependencies": {
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.3.0"
