--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           command: echo $FIREBASE_TS > src/environments/firebase.ts
       - run:
           name: Build
-          command: npm run ng build
+          command: npm run ng build --prod
       - save_cache:
           key: EmotifyCircleCI-{{ .Branch }}-{{ checksum "package.json" }}
           paths:
@@ -38,7 +38,7 @@ jobs:
           command: npm install
       - run:
           name: Deploy Master to Firebase
-          command: npm run firebase deploy --token=$FIREBASE_DEPLY_TOKEN
+          command: firebase deploy --token "$FIREBASE_DEPLOY_TOKEN"
 
 
 workflows:
