--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/materialize-css/dist/js/materialize.min.js"
+              "node_modules/materialize-css/dist/js/materialize.min.js",
+              "src/assets/redirection.js"
             ]
           },
           "configurations": {
