--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "emotify",
-  "version": "0.0.2",
+  "homepage": "https://emotify.io",
+  "repository": "https://github.com/rionlabs/Emotify.git",
+  "bugs": "https://github.com/rionlabs/Emotify/issues",
+  "version": "0.1.2",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
